--- a/Source/AlephNote.App/WPF/Windows/SyncErrorDialog.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SyncErrorDialog.xaml
@@ -21,7 +21,7 @@
 		<TextBox Grid.Row="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" x:Name="ErrorTrace" />
 
 		<StackPanel Grid.Row="3" HorizontalAlignment="Right" >
-			<Button Content="OK" Margin="5" MinWidth="100" />
+			<Button Content="OK" Margin="5" MinWidth="100" FontWeight="Bold" Click="ButtonBase_OnClick" />
 		</StackPanel>
 		
 	</Grid>
