--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -8,11 +8,12 @@
 		xmlns:windows="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:controls="clr-namespace:MSHC.WPF.Controls;assembly=CSharpUtils"
 		xmlns:mext="clr-namespace:MSHC.WPF.Extensions.MarkupExtensions;assembly=CSharpUtils"
+		xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
 		mc:Ignorable="d" 
 		d:DataContext="{d:DesignInstance windows:SettingsWindowViewmodel}"
 		WindowStartupLocation="CenterOwner"
 		Icon="/Resources/IconMain.png"
-		Title="Common Note - Configuration" MinHeight="300" MinWidth="300" Height="550" Width="535">
+		Title="Common Note - Configuration" MinHeight="300" MinWidth="300" Height="600" Width="535">
 	<Window.Resources>
 		<converter:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -52,8 +53,29 @@
 							</ContentControl>
 						</GroupBox>
 
-						<TextBlock Grid.Row="2" Grid.Column="0" Text="Synchronization frequency:" VerticalAlignment="Center" />
-						<ComboBox Grid.Row="2" Grid.Column="2" Margin="2" ItemsSource="{mext:EnumSource {x:Type settings:ConfigInterval}}" SelectedValue="{Binding Settings.SynchronizationFrequency}" />
+						<GroupBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Header="Synchronization" Margin="2">
+							<Grid Margin="4">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="50"/>
+									<ColumnDefinition Width="1*"/>
+								</Grid.ColumnDefinitions>
+								
+							<TextBlock Grid.Row="2" Grid.Column="0" Text="Synchronization frequency:" VerticalAlignment="Center" />
+							<ComboBox  Grid.Row="2" Grid.Column="2" Margin="2" ItemsSource="{mext:EnumSource {x:Type settings:ConfigInterval}}" SelectedValue="{Binding Settings.SynchronizationFrequency}" />
+
+							<TextBlock Grid.Row="3" Grid.Column="0" Text="Conflict resolution:" VerticalAlignment="Center" />
+								<ComboBox  Grid.Row="3" Grid.Column="2" Margin="2" ItemsSource="{mext:EnumSource {x:Type pi:ConflictResolutionStrategy}}" SelectedValue="{Binding Settings.ConflictResolution}" />
+							</Grid>
+						</GroupBox>
+						
 
 						<GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Header="Connection" Margin="2" Padding="5">
 							<Grid>
@@ -164,16 +186,24 @@
 									<ColumnDefinition Width="1*" />
 									<ColumnDefinition Width="1*" />
 								</Grid.ColumnDefinitions>
-								<StackPanel Grid.Column="0">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+								<StackPanel Grid.Row="0" Grid.Column="0">
 									<CheckBox Margin="2" Content="Display Line numbers" IsChecked="{Binding Settings.SciLineNumbers}" />
 									<CheckBox Margin="2" Content="Enable rectangular selection" IsChecked="{Binding Settings.SciRectSelection}" />
 									<CheckBox Margin="2" Content="Can zoom" IsChecked="{Binding Settings.SciZoomable}" />
+									<CheckBox Margin="2" Content="Use tabs instead of spaces" IsChecked="{Binding Settings.SciUseTabs}" />
 								</StackPanel>
-								<StackPanel Grid.Column="1">
+								<StackPanel Grid.Row="0" Grid.Column="1">
 									<CheckBox Margin="2" Content="Word wrap" IsChecked="{Binding Settings.SciWordWrap}" />
 									<CheckBox Margin="2" Content="Show Whitespaces" IsChecked="{Binding Settings.SciShowWhitespace}" />
 									<CheckBox Margin="2" Content="Show EOL" IsChecked="{Binding Settings.SciShowEOL}" />
 								</StackPanel>
+
+								<TextBlock Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Tab Width" />
+								<TextBox   Grid.Row="1" Grid.Column="1" Text="{Binding Settings.SciTabWidth}" />
 							</Grid>
 						</GroupBox>
 						<GroupBox Header="Startup" Padding="4">
