--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -58,6 +58,7 @@
 			</MenuItem>
 			<MenuItem Header="Help">
 				<MenuItem Header="Check for Updates" />
+				<MenuItem Header="Show Log" Command="{Binding ShowLogCommand}" />
 				<MenuItem Header="About" Command="{Binding ShowAboutCommand}" />
 			</MenuItem>
 		</Menu>
